--- a/data_resource/Longgang_District_People_Hospital/狂犬疫苗.md
+++ b/data_resource/Longgang_District_People_Hospital/狂犬疫苗.md
@@ -1,3 +1,3 @@
-keys:<狂犬疫苗>
+keys:<狂犬疫苗，接种程序>
 
-您好！在急诊科。
+五针法：于0、3、7、14和28天各注射狂犬病疫苗1剂次，共注射5剂次。四针法：于0天注射狂犬病疫苗2剂次，第7、21天各注射1剂次，共注射4剂次。如果中间某一剂次数延迟了，那么后续剂次接种时间相应顺延，不用重新启动疫苗免疫程序。
