人工修改龙岗人民医院的关键词

--- a/data_resource/Longgang_District_People_Hospital/体检项目.md
+++ b/data_resource/Longgang_District_People_Hospital/体检项目.md
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-keys:<体检项目，复查>
+keys:<体检项目>
 
-=======
-keys:<体检项目，复查>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
 体检项目复查需空腹（部分彩超项目如甲状腺、心脏、乳腺、泌尿系、子宫附件彩超可不空腹），请您于周一至周六上午8:00-12:00（法定节假日除外）前往健康管理中心体检部3楼前台业务窗口进行咨询，复查。
