--- a/data_resource/Longgang_District_People_Hospital/医保码.md
+++ b/data_resource/Longgang_District_People_Hospital/医保码.md
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-keys:<医保码，医保电子凭证，激活，使用>
+keys:<医保码，医保电子凭证，激活医保码>
 
-=======
-keys:<医保码，医保电子凭证，激活，使用>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
 1.医保码也叫医保电子凭证，是全国统一的医保信息平台，是打通医保全流程便民服务的金钥匙，解决了过去参保人实体卡携带不便、挂失补办困难等问题，方便百姓就医购药。2.如何激活医保码？可以通过国家医保服务平台、国家政务服务平台、国务院客户端或者经由国家医保局授权认证的第三方渠道如微信和支付宝激活医保码。以国家医保服务平台app为例，打开国家医保服务平台app并注册账号，注册后根据提示进行实名和实人认证，即可激活医保码，看病、买药扫码就能医保支付。
