--- a/data_resource/Longgang_District_People_Hospital/门诊.md
+++ b/data_resource/Longgang_District_People_Hospital/门诊.md
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-keys:<门诊，医保，统筹>
+keys:<医保，统筹>
 
-=======
-keys:<门诊，医保，统筹>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
 1.居民(含少儿学生)医保参保人在市内看门诊，需先选定社康等基层定点医疗机构再就医，才能按规定享受普通门诊统筹待遇。2.如选定了社康(选1送N)，那么在这家社康、社康的上级结算医院、同一家结算医院下设的其他社康就医，会自动使用居民(含少儿学生)医保参保人的医保统筹报销额度.3.*温馨提示*：除急诊抢救需要外，居民(含少儿学生)医保参保人未经转诊在非选定的定点医疗机构看门诊，不能享受普通门诊统筹待遇。如居民(含少儿学生)医保参保人办理了医保个人账户家庭绑定，且父母或监护人的个人账户余额充足，居民(含少儿学生)医保参保人在就医时产生的医疗费用，个人承担的自付部分则会自动使用父母或监护人的医保个人账户余额扣减。
