--- a/data_resource/Longgang_District_People_Hospital/专升本体检.md
+++ b/data_resource/Longgang_District_People_Hospital/专升本体检.md
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-keys:<专升本体检，体检预约>
+keys:<专升本体检>
 
-=======
-keys:<专升本体检，体检预约>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
-专升本体检不需要挂号，体检不需要挂号，不收挂号费。需要预约。体检当天请携带本人身份证，专升本体检，填写好信息，粘贴相片，到深圳市龙岗区人民医院健康管理大楼3楼体检部服务中心窗口7-10号窗口办理即可。领取报告时间：上午体检1个工作日后下午领取；下午体检2个工作日后下午领取
+请问您是想要了解关于专升本体检的相关内容吗？专升本体检不需要挂号，体检不需要挂号，不收挂号费。需要预约。预约渠道：（1）关注深圳市龙岗区人民医院公众号→点击“其他服务”→选择“体检服务”→点击“健康证、入职、特种工、驾驶证”界面→选择入职体检套餐→完善个人信息、选择预约时间→提交订单；（2）周一至周六上午8:00-11:30，下午14：00-16：30（周日及法定节假日除外）至健康管理大楼三楼现场直接开单体检。体检当天请携带本人身份证，专科本体检表，填写好信息，粘贴相片，到深圳市龙岗区人民医院健康管理大楼3楼体检部服务中心窗口7-10号窗口办理即可。领取报告时间：上午体检1个工作日后下午领取；下午体检2个工作日后下午领取。
