--- a/data_resource/Longgang_District_People_Hospital/健康证.md
+++ b/data_resource/Longgang_District_People_Hospital/健康证.md
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
-keys:<健康证，入职，公司>
+keys:<健康证>
 
-=======
-keys:<健康证，入职，公司>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
+是的，医院也可以办理健康证。在我院开设的健康管理中心体检部为求职者提供健康证的办理服务。通常情况下，医院的健康检查中心会对人员的身体状况进行全面的检查，并出具相应的健康证明。需要注意的是，不同的公司或行业可能对员工的健康证明有不同的要求，有些行业可能只接受由特定医院或科室出具的健康证明。所以，在办理健康证之前，最好先向你即将入职的公司或行业相关部门进行咨询，确认他们对于健康证的具体要求。
 一般来说，健康证的办理与入职要求无关。健康证是一种证明身体健康状态的证书，通常用于从事食品、化妆品等行业的人员。如果你不在这些行业工作，那么一般不需要办理健康证。我院健康管理中心体检部有各类入职体检、资格类体检等，然而，不同公司和行业对工作人员的健康要求是不同的，有些行业可能会要求员工提供健康证作为上岗条件。因此，如果你在入职的行业中从事与食品、化妆品等相关的工作，你可能需要办理健康证。具体是否需要办理健康证，你可以向你所入职的公司人力资源部门咨询。在医院办理健康证，你需要准备以下物品：1.身份证：用来验证你的身份和年龄。（必须满16周岁以上才可办理）2.如需办理免费健康证，携带身份证，提供龙岗区注册的营业执照复印件并盖公单；介绍信盖公章希望这些信息能对您有所帮助！
+您好！如果您想办理《健康证》，需要前往龙岗区人民医院健康管理中心健康大楼3楼体检一部服务中心7-10号窗口进行办理。您可以通过以下步骤进行预约和办理手续：1. 访问“龙岗区人民医院”微信公众号进行预约，或者通过我院官方网站公布的工作电话进行预约。2. 拿上身份证前往办理，上班时间周一至周六（节假日除外）上午08：00-12：00；下午14：00-17：00），预留充足时间做检查项目。并缴纳相应的费用。3.如需办理免费健康证，携带身份证，提供龙岗区注册的营业执照复印件并盖公单；介绍信盖公章4. 检查完如需要复查会通过电话或短信通知您回来复查；体检合格后5个工作日请在微信公众员“粤省事”登录并查看电子版本健康证（健康证是电子版本哦）。希望这些信息能对您有所帮助！
