--- a/data_resource/Longgang_District_People_Hospital/参保信息.md
+++ b/data_resource/Longgang_District_People_Hospital/参保信息.md
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-keys:<参保信息，异常，查询，医保>
+keys:<参保信息，异常查询>
 
-=======
-keys:<参保信息，异常，查询，医保>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
 可能是您参保信息异常，如医保缴费未到帐、少儿医保多地参保、离退休人员未按时提交生存认证等情况。建议您可先自行查询参保信息，也可到医院医保办协助您查询医保参保情况。
