--- a/data_resource/Longgang_District_People_Hospital/异地.md
+++ b/data_resource/Longgang_District_People_Hospital/异地.md
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-keys:<异地，注意事项>
+keys:<异地，医保结算>
 
-=======
-keys:<异地，注意事项>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
 1.直接结算≠备案：部分地区实行未备案也可直接医保结算，但可能存在待遇差异（以参保地政策为准）；2.建议备案申请时，异地就医备案的开始时间应选择在就医发生时间之前；3.备案申请时请详细查阅备案过程中系统提示的备案告知书及出现的相关信息提醒，如遇疑问请咨询参保地或医保窗口。
