--- a/data_resource/Longgang_District_People_Hospital/体检报告.md
+++ b/data_resource/Longgang_District_People_Hospital/体检报告.md
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-keys:<体检报告，科室>
+keys:<体检报告>
 
-=======
-keys:<体检报告，科室>
-
->>>>>>> a3ff6842df95e1a7824d983d685d5cb503b305e2
 体检结束后，收到体检报告已出的短信或电话时，可以在微信公众号搜索深圳市龙岗区人民医院，选择其他服务-体检服务-单位/个人体检报告里查看，或者来体检部4楼37号资料室打印，并去3楼8号诊室找全科医生免费解读报告，体检报告里异常报告后面有建议前往哪个科室就诊看医生，可以根据体检报告内容前往相关科室就诊看专科医生。
